--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.54.8",
+    "slick-carousel": "^1.8.1",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
